<resources>
    <string name="app_name">Appt</string>
    <string name="font_regular" translatable="false">fonts/open_sans_regular.ttf</string>
    <string name="font_semibold" translatable="false">fonts/open_sans_semibold.ttf</string>
    <string name="font_bold" translatable="false">fonts/open_sans_bold.ttf</string>
    <string name="tab_home">Home</string>
    <string name="tab_training">Trainingen</string>
    <string name="tab_knowledge">Kennisbank</string>
    <string name="tab_news">Nieuws</string>
    <string name="tab_more">Meer</string>
    <string name="tab_services">Diensten</string>
    <string name="home_tab_user_title">Gebruiker</string>
    <string name="home_tab_professional_title">Professional</string>
    <string name="title_talkback_gestures">TalkBack gebaren</string>
    <string name="title_talkback_actions">TalkBack acties</string>
    <string name="service_label">Appt</string>
    <string name="service_summary">Herkennen van gebaren</string>
    <string name="service_description">Om gebaren te herkennen is het noodzakelijk dat je deze service aanzet.\n\nDe gebaren training wordt automatisch gestart wanneer je de service aanzet.\n\nDe service wordt automatisch uitgeschakeld wanneer je de training stopt of wisselt naar een andere app.\n\nEr worden geen gegevens opgeslagen.</string>
    <string name="service_killed">De Appt service is automatisch uitgezet</string>
    <string name="service_inactive">De Appt service staat uit. Om gebaren te herkennen is het noodzakelijk dat je deze service aanzet.</string>
    <string name="service_enable_title">Appt service aanzetten</string>
    <string name="service_reason_message">Wegens technische beperkingen kun je alleen gebruik maken van de optie \'Oefenen\' wanneer TalkBack aan staat.</string>
    <string name="service_enable_message">Je moet eerst de Appt service aanzetten zodat gebaren herkend kunnen worden wanneer TalkBack geactiveerd is.\n\nDat doe je als volgt:\n\n1. Navigeer naar de \'Activeren\' knop. Dubbeltik om de toegankelijkheidsinstellingen te openen.\n2. Navigeer naar geïnstalleerde service met de naam \'Appt\'. Dubbeltik om het instellingenscherm te openen.\n3. Navigeer naar de schakelaar. Dubbeltik om de service toe te staan.\n4. Navigeer naar \'Toestaan\'. Dubbeltik om de service te activeren.\n5. Je hebt het activatieproces succesvol doorlopen. De gebaren training wordt automatisch gestart.\n\nNavigeer nu naar de \'Activeren\' knop om het activatieproces te starten.</string>
    <string name="error">Foutmelding</string>
    <string name="error_redirect">Fout tijdens het doorverwijzen. Probeer het later opnieuw.</string>
    <string name="error_something">Er is iets fout gegaan. Probeer het later opnieuw.</string>
    <string name="error_network">Je bent niet met het internet verbonden. Probeer het later opnieuw.</string>
    <string name="error_interrupted">Je internetverbinding is tussentijds verbroken. Probeer het later opnieuw.</string>
    <string name="error_404">De opgevraagde gegevens zijn niet gevonden. Probeer het later opnieuw.</string>
    <string name="error_500">Er is iets foutgegaan bij onze server. Probeer het later opnieuw.</string>
    <string name="error_503">Onze server is momenteel niet bereikbaar. Probeer het later opnieuw.</string>
    <string name="loading">Aan het laden</string>
    <string name="action_ok">Oké</string>
    <string name="action_confirm">Bevestigen</string>
    <string name="action_cancel">Annuleren</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_info">Informatie</string>
    <string name="action_share">Delen</string>
    <string name="action_share_article">Deel artikel</string>
    <string name="action_filter">Filteren</string>
    <string name="action_apply">Toepassen</string>
    <string name="action_practice">Oefenen</string>
    <string name="action_activate">Activeren</string>
    <string name="action_explanation">Uitleg</string>
    <string name="action_stop">Stoppen</string>
    <string name="action_continue">Doorgaan</string>
    <string name="action_skip">Overslaan</string>
    <string name="course_talkback_gestures_title">1. TalkBack gebaren</string>
    <string name="course_talkback_enable_title">2. TalkBack aanzetten</string>
    <string name="course_talkback_actions_title">3. TalkBack acties</string>
    <string name="topic_terms_title">Algemene voorwaarden</string>
    <string name="topic_privacy_title">Privacyverklaring</string>
    <string name="topic_accessibility_title">Toegankelijkheidsverklaring</string>
    <string name="topic_source_title">Broncode</string>
    <string name="topic_sponsor_title">SIDN Fonds</string>
    <string name="topic_profile_title">Mijn profiel</string>
    <string name="topic_contact_title">Contact</string>
    <string name="talkback_enable_title">TalkBack aanzetten</string>
    <string name="talkback_enable_text">Voordat je TalkBack aanzet is het verstandig om eerst de gebaren te leren.\n\nJe kunt TalkBack op twee manieren aanzetten.\n\nManier 1:\n1. Open de Instellingen-app\n2. Scroll naar onderen, tik op Toegankelijkheid\n3. Tik op TalkBack\n4. Zet de schakelaar aan\n\nManier 2:\n1. Open de Instellingen-app\n2. Scroll naar onderen, tik op Toegankelijkheid\n3. Tik op Sneltoets via volumeknop\n4. Zet de schakelaar aan\n5. Tik op Service van sneltoets\n6. Tik op TalkBack\n7. Tik op Toestaan in het dialoogvenster\n8. Houd beide volumeknoppen drie seconden ingedrukt\n\nLet op: de tweede manier werkt alleen op toestellen met Android versie 8 of hoger.</string>
    <string name="talkback_disabled_title">TalkBack staat uit</string>
    <string name="talkback_disabled_explanation">Je moet TalkBack aanzetten om deze training te volgen.</string>
    <string name="gesture_one_finger_touch_title">Het scherm verkennen</string>
    <string name="gesture_one_finger_touch_description">Raak het scherm met 1 vinger aan.</string>
    <string name="gesture_one_finger_touch_explanation">Wanneer je het scherm aanraakt wordt de inhoud onder in je vinger voorgelezen. Dit is een handige manier om te ontdekken hoe een scherm precies in elkaar zit.</string>
    <string name="gesture_one_finger_swipe_up_title">Instelling omhoog aanpassen</string>
    <string name="gesture_one_finger_swipe_up_description">Veeg met 1 vinger omhoog.</string>
    <string name="gesture_one_finger_swipe_up_explanation">Door omhoog te vegen ga je naar de vorige instelling. Zo stel je bijvoorbeeld in om te navigeren via links. Of je kunt de waarde van een schuifregelaar ophogen.</string>
    <string name="gesture_one_finger_swipe_down_title">Instelling omlaag aanpassen</string>
    <string name="gesture_one_finger_swipe_down_description">Veeg met 1 vinger omlaag.</string>
    <string name="gesture_one_finger_swipe_down_explanation">Door omlaag te vegen ga je naar de volgende instelling. Zo stel je bijvoorbeeld in om te navigeren via koppen. Of je kunt de waarde van een schuifregelaar verlagen.</string>
    <string name="gesture_one_finger_swipe_right_title">Naar het volgende onderdeel gaan</string>
    <string name="gesture_one_finger_swipe_right_description">Veeg met 1 vinger naar rechts.</string>
    <string name="gesture_one_finger_swipe_right_explanation">Door naar rechts te vegen verken je het scherm van links naar rechts en daarna van boven naar beneden.</string>
    <string name="gesture_one_finger_swipe_left_title">Naar het vorige onderdeel gaan</string>
    <string name="gesture_one_finger_swipe_left_description">Veeg met 1 vinger naar links.</string>
    <string name="gesture_one_finger_swipe_left_explanation">Door naar links te vegen verken je het scherm van rechts naar links en daarna van beneden naar boven.</string>
    <string name="gesture_two_finger_swipe_up_title">Omhoog scrollen</string>
    <string name="gesture_two_finger_swipe_up_description">Veeg met 2 vingers omhoog.</string>
    <string name="gesture_two_finger_swipe_up_explanation">In lijsten kun je met dit gebaar omhoog scrollen.</string>
    <string name="gesture_two_finger_swipe_down_title">Omlaag scrollen</string>
    <string name="gesture_two_finger_swipe_down_description">Veeg met 2 vingers omlaag.</string>
    <string name="gesture_two_finger_swipe_down_explanation">In lijsten kun je met dit gebaar omlaag scrollen.</string>
    <string name="gesture_two_finger_swipe_right_title">Naar rechts scrollen</string>
    <string name="gesture_two_finger_swipe_right_description">Veeg met 2 vingers naar rechts.</string>
    <string name="gesture_two_finger_swipe_right_explanation">In lijsten kun je met dit gebaar naar rechts scrollen. Soms kun je ook naar het volgende scherm navigeren met dit gebaar.</string>
    <string name="gesture_two_finger_swipe_left_title">Naar links scrollen</string>
    <string name="gesture_two_finger_swipe_left_description">Veeg met 2 vingers naar links.</string>
    <string name="gesture_two_finger_swipe_left_explanation">In lijsten kun je met dit gebaar naar links scrollen. Soms kun je ook naar het vorige scherm navigeren met dit gebaar.</string>
    <string name="gesture_three_finger_swipe_up_title">Naar de vorige leesinstelling gaan</string>
    <string name="gesture_three_finger_swipe_up_description">Veeg met 3 vingers omhoog.</string>
    <string name="talkback_action_copy_instruction1">Zo kopieer je tekst:</string>
    <string name="talkback_action_copy_instruction2">1. Selecteer de tekst die je wilt kopiëren. Weet je niet hoe dit moet? Volg dan eerst de training om tekst te selecteren.</string>
    <string name="talkback_action_copy_instruction3">2. Veeg omhoog en dan naar rechts om het lokale contextmenu te openen.</string>
    <string name="talkback_action_copy_instruction4">3. Kies de optie \'Opties bewerken\'.</string>
    <string name="talkback_action_copy_instruction5">4. Kies de optie \'Kopiëren\'.</string>
    <string name="talkback_action_copy_text">Kopieer deze tekst</string>
    <string name="auth_heading">Welkom!</string>
    <string name="auth_subtitle">Appt is het platform voor toegankelijkheid.\n\n\n
        Maak een gratis account aan om toegang tot onze community te krijgen, onze trainingen te volgen en meer over toegankelijkheid te leren.
    </string>
    <string name="auth_button_create_account">Account aanmaken</string>
    <string name="auth_button_login">Ik heb al een account</string>
    <string name="auth_button_forgot_password">Wachtwoord vergeten?</string>
    <string name="registration_field_email">E-mailadres</string>
    <string name="reset_password_text_title">Wachtwoord vergeten?</string>
    <string name="reset_password_text_subtitle">Vul hier je e-mailadres in en wij sturen een e-mail met een link waarmee je je wachtwoord kan wijzigen</string>
    <string name="reset_password_login_button">Nieuw wachtwoord aanvragen</string>
    <string name="profile_delete_account"><u>Account verwijderen</u></string>
    <string name="profile_log_out">Uitloggen</string>
    <string name="profile_change_password">Wachtwoord wijzigen</string>
    <string name="user_type_header">Wat is jouw rol?</string>
    <string name="user_type_list_title">App gebruiker</string>
    <string name="user_type_expert">Ervaringsdeskundige</string>
    <string name="user_type_interested">Geïnteresseerde</string>
    <string name="user_type_ambassador">Ambassadeur</string>
    <string name="user_type_professional_title">Professional</string>
    <string name="user_type_designer">Designer</string>
    <string name="user_type_tester">Tester</string>
    <string name="user_type_developer">Ontwikkelaar</string>
    <string name="user_type_manager">Manager</string>
    <string name="user_type_accessibility">Toegankelijkheidsexpert</string>
    <string name="user_type_auditor">Auditor</string>
    <string name="user_type_continue">Volgende</string>
</resources>