<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/auth_heading_text_view"
                style="@style/Widget.TextView.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/auth_heading" />

            <TextView
                android:id="@+id/auth_subtitle_text_view"
                style="@style/Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/auth_subtitle" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_hands_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:src="@drawable/icon_hands_up" />

            <Button
                android:id="@+id/create_account_btn"
                style="@style/Widget.Button.CreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_create_account"
                android:text="@string/auth_button_create_account" />

            <Button
                android:id="@+id/login_btn"
                style="@style/Widget.Button.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_login"
                android:text="@string/auth_button_login" />

            <Button
                android:id="@+id/forgot_password_btn"
                style="@style/Widget.Button.ForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_forgot_password"
                android:stateListAnimator="@null"
                android:text="@string/auth_button_forgot_password" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>